--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,18 @@ body {
     height: 100%;
 }
 
+.loading {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-size: 30px;
+}
+
 @media (max-width: 768px) {
     .logo-seq-image {
         height: 400px;
