--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,12 @@ body {
     font-weight: 400;
     font-style: normal;
 }
+#fivebelow{
+    font-family: 'Cliqey', sans-serif;
+    color: #fff;
+    font-weight: 400;
+    font-style: normal;
+}
 
 
 
