--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,12 @@ body {
     font-weight: 400;
     font-style: normal;
 }
+#molde{
+    font-family: 'Molde', sans-serif;
+    color: #fff;
+    font-weight: 400;
+    font-style: normal;
+}
 
 
 
