--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -36,16 +38,33 @@ body {
   font-style: normal;
 }
 
+@font-face {
+  font-family: Humane;
+  src: url("/fonts/Humane-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Vesper;
+  src: url("/fonts/Vesper-BoldMedium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* fonts */
 .despina_ {
   font-family: "Despina", sans-serif;
 }
+
 .molde_ {
   font-family: "Molde", sans-serif;
 }
+
 .cliqey_ {
   font-family: "Cliqey", sans-serif;
 }
+
 /* fonts  */
 
 #zairzest {
@@ -69,12 +88,14 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+
 #fivebelow {
   font-family: "Cliqey", sans-serif;
   color: #fff;
   font-weight: 400;
   font-style: normal;
 }
+
 #molde {
   font-family: "Molde", sans-serif;
   color: #fff;
@@ -383,4 +404,322 @@ body {
   .events-card:nth-of-type(2) {
     margin-top: -3rem;
   }
+}
+
+
+/*  ------------
+    PROFILE
+------------- */
+/* Keep all your original CSS */
+.profile-page-wrapper {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  height: 100vh;
+}
+
+.profile-page-bg-img {
+  background: url(/public/images/profile_page_bg.png) lightgray 50% / cover no-repeat;
+  mix-blend-mode: color-dodge;
+  opacity: 0.76;
+
+  /* These lines make it a permanent background */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  /* Pushes it behind the content */
+}
+
+/* FLIP ANIMATION */
+.profile-left-container {
+  position: relative;
+  width: 350px;
+  height: 600px;
+  cursor: pointer;
+  perspective: 1000px;
+  isolation: isolate;
+}
+
+.profile-left-container>.profile-left-wrapper,
+.profile-left-container>.profile-left-back-wrapper {
+  position: absolute;
+  width: 100%;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+}
+
+.profile-left-container>.profile-left-wrapper {
+  transform: rotateY(0deg);
+}
+
+.profile-left-container>.profile-left-back-wrapper {
+  transform: rotateY(180deg);
+}
+
+.profile-left-container.flipped>.profile-left-wrapper {
+  transform: rotateY(-180deg);
+}
+
+.profile-left-container.flipped>.profile-left-back-wrapper {
+  transform: rotateY(0deg);
+}
+
+
+
+
+.profile-left-wrapper,
+.profile-left-back-wrapper .profile-left-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.left-img-wrapper {
+  position: relative;
+  width: 350px;
+}
+
+.left-img-wrapper img {
+  position: absolute;
+}
+
+.left-img-wrapper .img1 {
+  top: 1.5rem;
+}
+
+.profile-img-desc {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 1000;
+  position: relative;
+}
+
+.qrcode {
+  border: 2px solid #fff;
+  display: flex;
+  width: 73%;
+  padding: 0.7rem;
+  align-items: center;
+  margin-top: 4rem;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.realid {
+  background-image: url("/public/images/profile_real_name_bg.png");
+  width: 73%;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.realid-left {
+  width: 100%;
+}
+
+.realid-right {
+  font-family: Despina;
+  font-size: 42px;
+}
+
+.realid-left div:nth-of-type(2) {
+  font-family: Despina;
+  font-style: italic;
+  font-size: 25px;
+}
+
+.glow-border {
+  height: 4px;
+  background-color: #fff;
+  width: 73%;
+  box-shadow: 1px 1px 30px 1px #fff;
+}
+
+.zenid-wrapper {
+  width: 73%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Despina;
+  margin: 0.4rem;
+}
+
+.zenid-text {
+  width: 5.2rem;
+  font-size: 20px;
+}
+
+.zenid-line {
+  height: 3px;
+  width: 100%;
+  margin-right: 0.2rem;
+  background-color: #fff;
+}
+
+.zenid-num {
+  font-family: Humane;
+  letter-spacing: 2px;
+  color: #ff4d00;
+  font-size: 32px;
+}
+
+.flip-text {
+  font-family: Cliqey;
+  color: #ff4d00;
+  font-size: 11px;
+  letter-spacing: 1px;
+}
+
+.image-mf {
+  padding: 0;
+}
+
+.profile-img-mf {
+  height: 250px;
+  object-fit: cover;
+  object-position: top;
+  isolation: isolate;
+}
+
+.profile-right-container {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.welcome {
+  font-size: 60px;
+  font-family: Despina;
+}
+
+.creds {
+  font-family: Vesper;
+  font-size: 35px;
+  margin-top: -1.5rem;
+}
+
+.name,
+.zenid-right,
+.avatar {
+  font-size: 23px;
+  font-family: Molde;
+}
+
+.community-btns {
+  display: flex;
+  gap: 1rem;
+}
+
+.whatsapp-btn,
+.events-btn {
+  padding: 0.5rem 1rem;
+  font-family: Despina;
+  font-size: 25px;
+  cursor: pointer;
+  outline: none;
+  margin-top: 3rem;
+  letter-spacing: 1px;
+}
+
+.whatsapp-btn {
+  background-color: #ff4d00;
+}
+
+.events-btn {
+  background-color: transparent;
+  backdrop-filter: blur(10px);
+  border: 2px solid #fff;
+}
+
+.note {
+  font-family: Space Grotesk;
+  margin-top: 1rem;
+}
+
+@media (max-width: 850px) {
+  .profile-page-wrapper {
+    flex-direction: column;
+    height: fit-content;
+    gap: 1rem;
+  }
+
+  .profile-right-container {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left-img-wrapper,
+  .profile-img-desc {
+    top: 2rem;
+  }
+
+  .left-img-wrapper {
+    width: 290px;
+  }
+
+  .profile-img-mf {
+    height: 200px;
+  }
+
+  .qrcode,
+  .realid,
+  .glow-border,
+  .zenid-wrapper {
+    width: 65%;
+  }
+
+  .zenid-num {
+    font-size: 24px;
+  }
+
+  .flip-text {
+    font-size: 9px;
+  }
+
+  .realid-left {
+    font-size: 15px;
+  }
+
+  .realid-right {
+    font-size: 30px;
+  }
+
+  .profile-left-container {
+    height: 520px;
+  }
+
+  .welcome {
+    font-size: 40px;
+  }
+
+  .creds {
+    font-size: 24px;
+    /* margin-top: 1px; */
+    line-height: 60px;
+    text-align: center;
+  }
+
+  .name,
+  .zenid-right,
+  .avatar {
+    font-size: 16px;
+  }
+
+  .whatsapp-btn,
+  .events-btn {
+  letter-spacing: 2px;
+    font-size: 20px;
+  }
+
 }
