--- a/src/App.css
+++ b/src/App.css
@@ -394,7 +394,7 @@ body {
 }
 
 .profile-page-bg-img {
-  background: url(/images/profile_page_bg.png) lightgray 50% / cover no-repeat;
+  background: url(https://res.cloudinary.com/dzkuia4lg/image/upload/v1760074322/profile_page_bg_gvpwnq.png) lightgray 50% / cover no-repeat;
   mix-blend-mode: color-dodge;
   opacity: 0.76;
 
@@ -488,7 +488,7 @@ body {
 }
 
 .realid {
-  background-image: url("/public/images/profile_real_name_bg.png");
+  background-image: url("https://res.cloudinary.com/dzkuia4lg/image/upload/v1760074321/profile_real_name_bg_g5gztq.png");
   width: 73%;
   padding: 0.5rem;
   display: flex;
@@ -646,7 +646,7 @@ body {
 }
 
 .events-page-main-bg {
-  background-image: url("/public/images/explore_page_combined.png");
+  background-image: url("https://res.cloudinary.com/dzkuia4lg/image/upload/v1760074314/explore_page_combined_odzffj.png");
   background-repeat: no-repeat;
   position: fixed;
   top: 0;
@@ -914,7 +914,7 @@ body {
 ---------- */
 
 .footer-wrapper {
-  background-image: url("/public/images/footer_bg.png");
+  background-image: url("https://res.cloudinary.com/dzkuia4lg/image/upload/v1760074316/footer_bg_cw1qsp.png");
   height: 45vh;
   color: #fff;
   display: flex;
